# ts-dl

./: .gitignore  LICENSE  README.md  heart-rate-prediction.html  heart-rate-prediction.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
data/: series_ranges.csv
